# Currency_updater_bot

./: README.md  currency_rates.json  main.py  pyproject.toml
