[tool.poetry]
name = "currency-updater-bot"
version = "0.1.0"
description = ""
authors = ["Artyom Guryanov <bishop81285@gmail.com>"]
readme = "README.md"
packages = [{include = "currency_updater_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
python-telegram-bot = "^13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
